--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "node-env-run server --exec nodemon"
-
   },
   "author": "Oskari Niskanen",
   "license": "ISC",
@@ -26,7 +25,8 @@
     "multer": "^1.4.1",
     "node-env-run": "^3.0.2",
     "nodemon": "^1.18.11",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "react-color": "^2.17.3"
   },
   "devDependencies": {},
   "description": "WWW-programming coursework 10ECT"
