--- a/fuksipassi/package.json
+++ b/fuksipassi/package.json
@@ -7,7 +7,9 @@
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.1.1",
     "classnames": "^2.2.6",
+    "material-ui": "^0.20.2",
     "react": "^16.8.6",
+    "react-color": "^2.17.3",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
@@ -32,5 +34,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "case-sensitive-paths-webpack-plugin": "^2.2.0"
   }
 }
