--- a/fuksipassi/package.json
+++ b/fuksipassi/package.json
@@ -11,6 +11,7 @@
     "react": "^16.8.6",
     "react-color": "^2.17.3",
     "react-dom": "^16.8.6",
+    "react-dropzone": "^10.1.5",
     "react-scripts": "3.0.1"
   },
   "scripts": {
