--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
+    "backend": "nodemon app.js",
+    "frontend": "cd fuksipassi && serve -s build -l 3000",
+    "dev": "concurrently \"npm run backend\" \"npm run frontend\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "node-env-run server --exec nodemon"
   },
@@ -11,11 +15,10 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "concurrently": "^4.1.1",
     "content-filter": "^1.1.2",
     "cookie-parser": "^1.4.4",
-    "csurf": "^1.10.0",
     "express": "^4.16.4",
-    "express-hbs": "^2.1.2",
     "express-session": "^1.16.1",
     "express-validator": "^5.3.1",
     "fs": "0.0.1-security",
@@ -25,8 +28,7 @@
     "multer": "^1.4.1",
     "node-env-run": "^3.0.2",
     "nodemon": "^1.18.11",
-    "npm-run-all": "^4.1.5",
-    "react-color": "^2.17.3"
+    "npm-run-all": "^4.1.5"
   },
   "devDependencies": {},
   "description": "WWW-programming coursework 10ECT"
